--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -1,32 +1,225 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập</title>
-    <link rel="stylesheet" href="login.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Đăng nhập</title>
+
+  <!-- Nếu muốn tách file, copy phần <style> sang login.css và thay bằng <link rel="stylesheet" href="login.css"> -->
+  <style>
+    :root{
+      --bg1:#0f172a; --bg2:#1e293b; --card:#0b1220cc;
+      --text:#e2e8f0; --muted:#94a3b8; --accent:#6366f1; --accent-2:#22d3ee;
+      --error:#ef4444; --border:#263246; --radius:16px; --shadow: 0 20px 50px rgba(0,0,0,.35);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji";
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 10% -10%, rgba(99,102,241,.25), transparent 60%),
+        radial-gradient(900px 500px at 110% 10%, rgba(34,211,238,.18), transparent 55%),
+        linear-gradient(160deg, var(--bg1), var(--bg2));
+      display:grid; place-items:center; padding:24px;
+    }
+
+    .login-container{
+      width:100%; max-width:420px;
+      background: linear-gradient(180deg, rgba(16, 24, 40, .75), rgba(11, 18, 32, .6));
+      backdrop-filter: blur(10px);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:28px;
+      animation: fadeIn .6s ease both;
+    }
+    @keyframes fadeIn{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none}}
+
+    .brand{
+      display:flex; align-items:center; gap:10px; margin-bottom:8px;
+    }
+    .brand__logo{
+      width:40px; height:40px; border-radius:12px;
+      background: conic-gradient(from 90deg, var(--accent), var(--accent-2), var(--accent));
+      box-shadow: 0 6px 24px rgba(99,102,241,.35);
+    }
+    h2{margin:6px 0 20px 0; font-size:24px; font-weight:700; letter-spacing:.3px}
+
+    form{display:grid; gap:14px}
+
+    .form-group{display:grid; gap:8px}
+    .form-group label{font-size:14px; color:var(--muted)}
+    .input-wrap{
+      position:relative;
+      display:flex; align-items:center;
+      border:1px solid var(--border);
+      border-radius:12px; background:rgba(255,255,255,.02);
+    }
+    .input-wrap:focus-within{border-color:var(--accent); box-shadow:0 0 0 4px rgba(99,102,241,.15)}
+    input{
+      width:100%; padding:12px 14px 12px 14px;
+      font-size:16px; color:var(--text);
+      background:transparent; border:0; outline:0;
+    }
+
+    .toggle-pass{
+      position:absolute; right:8px; top:50%; transform:translateY(-50%);
+      border:0; background:transparent; color:var(--muted);
+      padding:6px 10px; border-radius:8px; cursor:pointer;
+    }
+    .toggle-pass:hover{color:#cbd5e1; background:rgba(148,163,184,.12)}
+
+    .row{
+      display:flex; align-items:center; justify-content:space-between; gap:8px; margin-top:2px;
+      font-size:14px; color:var(--muted);
+    }
+    .row a{color:#cbd5e1; text-decoration:none}
+    .row a:hover{color:#fff; text-decoration:underline}
+
+    .btn-login{
+      width:100%; padding:12px 16px; border:0; border-radius:12px;
+      background: linear-gradient(90deg, var(--accent), #7c3aed);
+      color:white; font-weight:600; font-size:16px; cursor:pointer;
+      transition: transform .06s ease, filter .2s ease;
+    }
+    .btn-login:hover{filter:brightness(1.05)}
+    .btn-login:active{transform:translateY(1px)}
+    .btn-login:disabled{opacity:.6; cursor:not-allowed}
+
+    .register-link{
+      margin-top:8px; text-align:center; color:var(--muted); font-size:14px;
+    }
+    .register-link a{color:#e5e7eb; text-decoration:none}
+    .register-link a:hover{text-decoration:underline}
+
+    .error{
+      display:none; color:var(--error); font-size:13px; margin-top:-4px;
+    }
+
+    /* Dark mode mặc định · Nếu trình duyệt là light mode, giảm độ tối */
+    @media (prefers-color-scheme: light){
+      :root{ --bg1:#e8edf7; --bg2:#eaf1ff; --card:#ffffff; --text:#0f172a; --muted:#475569; --border:#e5e7eb}
+      body{
+        background:
+          radial-gradient(1200px 600px at 10% -10%, rgba(99,102,241,.18), transparent 60%),
+          radial-gradient(900px 500px at 110% 10%, rgba(34,211,238,.15), transparent 55%),
+          linear-gradient(180deg, #eef2ff, #eaf1ff);
+      }
+      .login-container{background:#ffffffcc}
+      .brand__logo{box-shadow:0 6px 24px rgba(99,102,241,.28)}
+    }
+  </style>
 </head>
 <body>
-<!-- Header -->
-<div class="login-container">
-    <h2>Đăng nhập</h2>
-    <form action="process_login.php" method="POST">
-        <div class="form-group">
-            <label for="username">Tên đăng nhập</label>
-            <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập" required>
-        </div>
 
-        <div class="form-group">
-            <label for="password">Mật khẩu</label>
-            <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
-        </div>
+  <div class="login-container" role="main" aria-labelledby="title">
+    <div class="brand">
+      <div class="brand__logo" aria-hidden="true"></div>
+      <div>
+        <div style="font-weight:700; letter-spacing:.3px">CinemaX</div>
+        <div style="font-size:12px; color:var(--muted)">Welcome back</div>
+      </div>
+    </div>
 
-        <button type="submit" class="btn-login">Đăng nhập</button>
-        <p class="register-link">
-            Chưa có tài khoản? <a href="../Sign up/giaodien.html">Đăng ký</a>
-        </p>
+    <h2 id="title">Đăng nhập</h2>
+
+    <!-- Giữ nguyên action PHP -->
+    <form id="loginForm" action="process_login.php" method="POST" novalidate>
+      <div class="form-group">
+        <label for="username">Tên đăng nhập</label>
+        <div class="input-wrap">
+          <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập" autocomplete="username" required />
+        </div>
+        <div class="error" id="errUser">Vui lòng nhập tên đăng nhập.</div>
+      </div>
+
+      <div class="form-group">
+        <label for="password">Mật khẩu</label>
+        <div class="input-wrap">
+          <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" autocomplete="current-password" required minlength="6" />
+          <button class="toggle-pass" type="button" aria-label="Hiện hoặc ẩn mật khẩu" id="togglePass">Hiện</button>
+        </div>
+        <div class="error" id="errPass">Mật khẩu tối thiểu 6 ký tự.</div>
+      </div>
+
+      <div class="row">
+        <label style="display:flex; align-items:center; gap:8px; cursor:pointer">
+          <input type="checkbox" id="remember" name="remember" />
+          Ghi nhớ đăng nhập
+        </label>
+        <a href="#" onclick="alert('Liên hệ quản trị viên để đặt lại mật khẩu.'); return false;">Quên mật khẩu?</a>
+      </div>
+
+      <button type="submit" class="btn-login" id="btnLogin" disabled>Đăng nhập</button>
+
+      <p class="register-link">
+        Chưa có tài khoản?
+        <a href="../Sign up/giaodien.html">Đăng ký</a>
+      </p>
     </form>
-</div>
-<script src="login.js"></script>
+  </div>
+
+  <!-- Nếu muốn tách file, copy script này sang login.js và thay bằng <script src="login.js"></script> -->
+  <script>
+    const $ = (s, r=document) => r.querySelector(s);
+
+    const form = $('#loginForm');
+    const user = $('#username');
+    const pass = $('#password');
+    const btn  = $('#btnLogin');
+    const errUser = $('#errUser');
+    const errPass = $('#errPass');
+    const toggle = $('#togglePass');
+
+    // Toggle hiện/ẩn mật khẩu
+    toggle.addEventListener('click', () => {
+      const showing = pass.type === 'text';
+      pass.type = showing ? 'password' : 'text';
+      toggle.textContent = showing ? 'Hiện' : 'Ẩn';
+      pass.focus();
+    });
+
+    // Kiểm tra hợp lệ theo thời gian thực
+    function validate(){
+      let ok = true;
+
+      if (!user.value.trim()){
+        errUser.style.display = 'block'; ok = false;
+      } else {
+        errUser.style.display = 'none';
+      }
+
+      if (!pass.value.trim() || pass.value.length < 6){
+        errPass.style.display = 'block'; ok = false;
+      } else {
+        errPass.style.display = 'none';
+      }
+
+      btn.disabled = !ok;
+      return ok;
+    }
+    form.addEventListener('input', validate);
+    form.addEventListener('change', validate);
+
+    // Submit an toàn (nếu backend muốn bắt lỗi phía server thì giữ nguyên)
+    form.addEventListener('submit', (e) => {
+      if (!validate()){
+        e.preventDefault();
+      }
+    });
+
+    // Cho phép Enter tại input bất kỳ để submit nếu hợp lệ
+    [user, pass].forEach(el => {
+      el.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter'){
+          if (!validate()) e.preventDefault();
+        }
+      });
+    });
+
+    // Tự focus vào tên đăng nhập khi mở trang
+    window.addEventListener('DOMContentLoaded', () => user.focus());
+  </script>
 </body>
 </html>
